eliminated finalize() in engine